fix too wide code boxes (#629)

--- a/documentation-website/src/index.css
+++ b/documentation-website/src/index.css
@@ -500,7 +500,7 @@ html.dark-mode {
 
   .card {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr minmax(100px, 2fr);
     background: rgba(0 0 0 / 10%);
     box-shadow: rgba(0 0 0 / 50%) 0.5em 0.5em 1em;
     border: var(--dark-green) solid 1px;
